--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="nav-bar" id="nav-bar">
+        <ul> 
+            <li><a href="home.html" class="nav-link">HOME</a></li>
+            <li><a href="about.html" class="nav-link">ABOUT</a></li>
+            <li><a href="services.html" class="nav-link">SERVICES</a></li>
+            <li><a href="appointment.html" class="nav-link">BOOK APPOINTMENT</a></li>
+            <li><a href="news.html" class="nav-link">NEWS</a></li>
+            <li><a href="contact.html" class="nav-link">CONTACT</a></li>
+        </ul>    
+     </nav>     
     
-    <h1> Group project</h1>
+    <h2>group project</h2>
     <script src="scripts.js"></script>
 </body>
 </html>
