about.html: Added a section on the about part

--- a/about.html
+++ b/about.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Group project</h1>
+    <section id="about">
+        <h1> About Us</h1>
+        <br>
+        <div class="container ">
+            <div class="row about-us">
+                <div class="col-lg-7">
+                    <h4><hr>Who We Are<hr></h4>
+                    <p>Go-care clinique is a collection of diverse 
+                        healthcare solutions thoughtfully pieced together
+                         and simply delivered. Wellness of the family unit
+                          is the axis on which our dedicated team of compassionate 
+                          professionals spin to ensure quality and safe solutions 
+                          that cover everyone.</p>
 
     <script src="scripts.js"></script>
 </body>
