about.html: Added a heading on the about section

--- a/about.html
+++ b/about.html
@@ -21,6 +21,25 @@
                           is the axis on which our dedicated team of compassionate 
                           professionals spin to ensure quality and safe solutions 
                           that cover everyone.</p>
+                          <p>Understanding that each patient is different, 
+                            it is our job to develop solutions that are 
+                            tailored to their unique needs. This informs our 
+                            value proposition, distribution channels and 
+                            customer relationships which all focus on one 
+                            large group of
+                            customers with diverse needs and problems.</p>
+    
+                    <h4><hr>OUR CORPORATE CULTURE<hr></h4>
+                    <p>We have a strong culture that allows every employee to 
+                            feel part of the bigger team by giving space and freedom 
+                            to perform to their best
+                            ability. Being a hospital, everyone’s key responsibility 
+                            is geared towards preservation of life. This we do with 
+                            strong emphasis on professionalism and excellent customer 
+                            service. We encourage openness at all levels and operate 
+                            an open-door policy from employees to top management.</p>
+    
+                </div>
 
     <script src="scripts.js"></script>
 </body>
