Added the team section

--- a/about.html
+++ b/about.html
@@ -52,6 +52,53 @@
         </div>
         <br>
 
+        <div>
+            <h2> OUR TEAM</h2>
+        </div>
+        <div class="row row-cols-1 row-cols-md-4 g-4 ">
+            <div class="col">
+              <div class="card ">
+                <img src="https://media.istockphoto.com/photos/portrait-of-smiling-mixed-race-woman-looking-at-camera-picture-id1319763830?b=1&k=20&m=1319763830&s=170667a&w=0&h=wE44n9yP1nrefeqv5DCl5mE3ouU01FNNHeZPR0yDCWA=" class="card-img-top" alt="...">
+                <div class="overlay">
+                  <p>I am Dr. Rita.</p>
+                  <p>Head of the Paediatrics Unit</p>
+                </div>
+
+              </div>
+            </div>
+            <div class="col">
+              <div class="card ">
+                <img src="https://media.istockphoto.com/photos/happy-african-american-female-doctor-or-scientist-picture-id1310047621?s=612x612" class="card-img-top" alt="...">
+                <div class="overlay">
+                  <p>I am Dr. Rita.</p>
+                  <p>Head of the Paediatrics Unit</p>
+                </div>
+ 
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="https://media.istockphoto.com/photos/successful-businesswoman-picture-id1297832789?b=1&k=20&m=1297832789&s=170667a&w=0&h=5sBCKhENkSE2179jIyZX5yv4O9SFQ2SHWw0DZPcoqd4=" class="card-img-top" alt="...">
+                <div class="overlay">
+                  <p>I am Dr. Rita.</p>
+                  <p>Head of the Paediatrics Unit</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                  <img src="https://images.unsplash.com/photo-1596305460879-939d432ea62d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjExfHxibGFjayUyMHdvbWFufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+                  <div class="overlay">
+                    <p>I am Dr. Rita.</p>
+                    <p>Head of the Paediatrics Unit</p>
+                  </div>
+                 
+                </div>
+              </div>
+          </div>
+
+    </section>
+
     <script src="scripts.js"></script>
 </body>
 </html>
