--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Group project</h1>
+    <nav class="nav-bar" id="nav-bar">
+        <ul> 
+            <li><a href="index.html" class="nav-link">HOME</a></li>
+            <li><a href="about.html" class="nav-link">ABOUT</a></li>
+            <li><a href="services.html" class="nav-link">SERVICES</a></li>
+            <li><a href="appointment.html" class="nav-link">BOOK APPOINTMENT</a></li>
+            <li><a href="news.html" class="nav-link">NEWS</a></li>
+            <li><a href="contact.html" class="nav-link">CONTACT</a></li>
+        </ul>    
+     </nav>    
 
     <script src="scripts.js"></script>
 </body>
