About.html:Added the core values part

--- a/about.html
+++ b/about.html
@@ -17,21 +17,14 @@
             <div class="row about-us">
                 <div class="col-lg-7">
                     <h4><hr>Who We Are<hr></h4>
-                    <p>Go-care clinique is a collection of diverse 
+                    <p>Go-care-cliniq is a collection of diverse 
                         healthcare solutions thoughtfully pieced together
                          and simply delivered. Wellness of the family unit
                           is the axis on which our dedicated team of compassionate 
                           professionals spin to ensure quality and safe solutions 
                           that cover everyone.</p>
-                          <p>Understanding that each patient is different, 
-                            it is our job to develop solutions that are 
-                            tailored to their unique needs. This informs our 
-                            value proposition, distribution channels and 
-                            customer relationships which all focus on one 
-                            large group of
-                            customers with diverse needs and problems.</p>
     
-                    <h4><hr>OUR CORPORATE CULTURE<hr></h4>
+                    <h4><hr>Our Corporate Culture<hr></h4>
                     <p>We have a strong culture that allows every employee to 
                             feel part of the bigger team by giving space and freedom 
                             to perform to their best
@@ -41,6 +34,13 @@
                             service. We encourage openness at all levels and operate 
                             an open-door policy from employees to top management.</p>
     
+                    <h4><hr>Our Core Values<hr></h4>
+                        <ul>
+                        <li>Efficiency and Effectiveness</li>
+                        <li>Reliability</li>
+                        <li>Care and compassion</li>
+                        <li>Quality and Safety</li>
+                        </ul> 
                 </div>
 
                 <div class="col-lg-5">
