added sub-menus to services

--- a/services.html
+++ b/services.html
@@ -12,7 +12,20 @@
         <ul> 
             <li><a href="index.html" class="nav-link">HOME</a></li>
             <li><a href="about.html" class="nav-link">ABOUT</a></li>
-            <li><a href="services.html" class="nav-link">SERVICES</a></li>
+            <li><a href="services.html" class="nav-link">SERVICES</a>
+                <div class="sub-menu-1">
+                    <ul>
+                        <li><a href="#"></a>OBSTETRICS & GYNACOLOGY</li>
+                        <li><a href="#"></a>PSYCHIATRY</li>
+                        <li><a href="#"></a>INTERNAL MEDICINE</li>
+                        <li><a href="#"></a>LAB</li>
+                        <li><a href="#"></a>SURGERY</li>
+                        <li><a href="#"></a>PAEDIATRICS</li>
+                        <li><a href="#"></a>INPATIENT & OUTPATIENT</li>
+                    </ul>
+
+                </div>
+            </li>
             <li><a href="appointment.html" class="nav-link">BOOK APPOINTMENT</a></li>
             <li><a href="news.html" class="nav-link">NEWS</a></li>
             <li><a href="contact.html" class="nav-link">CONTACT</a></li>
