--- a/about.html
+++ b/about.html
@@ -72,27 +72,27 @@
               <div class="card ">
                 <img src="https://media.istockphoto.com/photos/happy-african-american-female-doctor-or-scientist-picture-id1310047621?s=612x612" class="card-img-top" alt="...">
                 <div class="overlay">
-                  <p>I am Dr. Rita.</p>
-                  <p>Head of the Paediatrics Unit</p>
+                  <p>I am Dr. Chimmamanda.</p>
+                  <p>Head Obstetrician and gynecologist</p>
                 </div>
  
               </div>
             </div>
             <div class="col">
-              <div class="card h-100">
+              <div class="card">
                 <img src="https://media.istockphoto.com/photos/successful-businesswoman-picture-id1297832789?b=1&k=20&m=1297832789&s=170667a&w=0&h=5sBCKhENkSE2179jIyZX5yv4O9SFQ2SHWw0DZPcoqd4=" class="card-img-top" alt="...">
                 <div class="overlay">
-                  <p>I am Dr. Rita.</p>
-                  <p>Head of the Paediatrics Unit</p>
+                  <p>I am Dr. Amanda.</p>
+                  <p>Head of the Psychatry department</p>
                 </div>
               </div>
             </div>
             <div class="col">
-                <div class="card h-100">
-                  <img src="https://images.unsplash.com/photo-1596305460879-939d432ea62d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjExfHxibGFjayUyMHdvbWFufGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="...">
+                <div class="card">
+                  <img src="https://previews.123rf.com/images/fizkes/fizkes1904/fizkes190400726/120839317-happy-african-american-black-business-man-hr-e-coach-smiling-talking-looking-at-camera-webcam-making.jpg?fj=1" class="card-img-top" alt="...">
                   <div class="overlay">
-                    <p>I am Dr. Rita.</p>
-                    <p>Head of the Paediatrics Unit</p>
+                    <p>I am Dr. Ben.</p>
+                    <p>Head of the Ambulance and Emergency Services</p>
                   </div>
                  
                 </div>
@@ -100,6 +100,10 @@
           </div>
 
     </section>
+
+    <div class="address">
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=moringa%20school%20nairobi&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+    </div>
 
     <script src="scripts.js"></script>
 </body>
