--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
         </ul>    
      </nav>    
     <h1 class="mb-0 title">WELCOME TO GO-CARE-CLINIQ</h1>
-    
       <div class="row">
         <div class="col-sm-6">
           <div class="card bg-transparent ">
@@ -76,7 +75,7 @@
               <h4 class="card-text text-white">Affordable, convenient,</h4>
               <h4 class="card-text text-white">easily  accessible</h4>
               <h4 class="card-text text-white">and made you </h4>
-              <h4 class="card-text text-white">feel good?</h4>
+              <h4 class="card-text text-white">and made you feel good?</h4>
               <p class="card-text text-white" id="small">We bring real doctors and real care to you at the convenience of your home </p>
               
             </div>
@@ -94,7 +93,7 @@
           </div>
         </div> 
        </div>
-       <div class="container">
+       <!-- <div class="container">
         <div class="dropdown text-align-centre">
             <a
               class="btn btn-dark dropdown-toggle"
@@ -114,7 +113,7 @@
               <li><a class="dropdown-item" href="#">Obstetrics & Gynaecology</a></li>
               <li><a class="dropdown-item" href="#">Lab</a></li>
             </ul>
-          </div>
+          </div> -->
        </div>
        <div class="container p-4 "> 
         <!-- Section: Social media -->
