--- a/appointment.html
+++ b/appointment.html
@@ -11,6 +11,16 @@
 </head>
 <body>
     <h3>BOOK YOUR APPOINTMENTS HERE</h3>
+    <nav class="nav-bar" id="nav-bar">
+        <ul> 
+            <li><a href="index.html" class="nav-link">HOME</a></li>
+            <li><a href="about.html" class="nav-link">ABOUT</a></li>
+            <li><a href="services.html" class="nav-link">SERVICES</a></li>
+            <li><a href="appointment.html" class="nav-link">BOOK APPOINTMENT</a></li>
+            <li><a href="news.html" class="nav-link">NEWS</a></li>
+            <li><a href="contact.html" class="nav-link">CONTACT</a></li>
+        </ul>    
+     </nav>    
 
     <!-- Begin Mailchimp Signup Form -->
     <div id="mc_embed_signup">
