--- a/services.html
+++ b/services.html
@@ -6,9 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health care</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    rel="stylesheet"
+     />
+  <!-- Google Fonts -->
+      <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+      />
+  <!-- MDB -->
+      <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css"
+    rel="stylesheet"
+      />
 </head>
 <body>
-    <nav class="nav-bar" id="nav-bar">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ms-auto">
+        <div class="container-fluid">
+         
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="services.html">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="appointment.html">Book Appointment</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="news.html">News & Media</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacts.html">Contact</a>
+              </li>
+             
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <!-- <nav class="nav-bar" id="nav-bar">
         <ul> 
             <li><a href="index.html" class="nav-link">HOME</a></li>
             <li><a href="about.html" class="nav-link">ABOUT</a></li>
@@ -30,8 +83,12 @@
             <li><a href="news.html" class="nav-link">NEWS</a></li>
             <li><a href="contact.html" class="nav-link">CONTACT</a></li>
         </ul>    
-     </nav>    
+     </nav>     -->
 
     <script src="scripts.js"></script>
+    <script
+type="text/javascript"
+src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.js"
+></script>
 </body>
 </html>
