--- a/contacts.html
+++ b/contacts.html
@@ -44,29 +44,69 @@
        </div>
     </div>
 </div>
-<div class="container p-4 "id="text"> 
-    <section class="mb-4 bottom">
-        <a class="btn btn-outline-primary btn-floating m-1 " href="https://www.facebook.com/" target="_blank" role="button"><i class="fab fa-facebook-f social" ></i></a> 
-        <a class="btn btn-outline-primary btn-floating m-1" href="" role="button"
-        ><i class="fab fa-twitter social"></i
-      ></a> 
-      <a class="btn btn-outline-primary btn-floating m-1" href="http://www.google.com/" role="button"
-        ><i class="fab fa-google social"></i
-      ></a>
-       <a class="btn btn-outline-primary btn-floating m-1" href="https://www.instagram.com/" role="button"
-        ><i class="fab fa-instagram social"></i
-      ></a> 
-      <a class="btn btn-outline-primary btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-linkedin-in social"></i
-      ></a>
-    </section>
 </div>
-<footer class="page-footer font-small blue" id="deal">
-    <div class="deal">
-        <p><strong>Go Care Cliniq © 2022 Copyright: All Rights Reserved</strong></p>
+
+<footer class="bg-light text-center  fixed-bottom text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a
+          class="btn btn-primary btn-floating m-1"
+          style="background-color: #3b5998;"
+          href="#!"
+          role="button"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+  
+        <!-- Twitter -->
+        <a
+          class="btn btn-primary btn-floating m-1"
+          style="background-color: #55acee;"
+          href="#!"
+          role="button"
+          ><i class="fab fa-twitter"></i
+        ></a>
+  
+        <!-- Google -->
+        <a
+          class="btn btn-primary btn-floating m-1"
+          style="background-color: #dd4b39;"
+          href="#!"
+          role="button"
+          ><i class="fab fa-google"></i
+        ></a>
+  
+        <!-- Instagram -->
+        <a
+          class="btn btn-primary btn-floating m-1"
+          style="background-color: #ac2bac;"
+          href="#!"
+          role="button"
+          ><i class="fab fa-instagram"></i
+        ></a>
+  
+        <!-- Linkedin -->
+        <a
+          class="btn btn-primary btn-floating m-1"
+          style="background-color: #0082ca;"
+          href="#!"
+          role="button"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+      </section>
+      <!-- Section: Social media -->
     </div>
-</footer> 
-</div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/">Go-care cliniq.com</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
 
     <script src="scripts.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.js"></script>
