New edits to file

--- a/appointment.html
+++ b/appointment.html
@@ -7,7 +7,7 @@
     <title>Health care</title>
     <script src="scripts.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Are You Serious' rel='stylesheet'>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h3>BOOK YOUR APPOINTMENTS HERE</h3>
@@ -23,7 +23,7 @@
             <li><a href="contact.html" class="nav-link">CONTACT</a></li>
         </ul>    
      </nav>   
-     <div class="Appointment" id="mc_embed_signup"> 
+    <div class="Appointment" id="mc_embed_signup"> 
     <!-- Begin Mailchimp Signup Form -->
            <h3>BOOK YOUR APPOINTMENTS HERE</h3>
             <form action="https://gmail.us14.list-manage.com/subscribe/post?u=baca0df9c638b46c0bb7a54a9&amp;id=6a557af09d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
