--- a/appointment.html
+++ b/appointment.html
@@ -53,7 +53,7 @@
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
@@ -79,7 +79,7 @@
       </nav> 
      <div class="row">
           <div class="col-lg-6">
-            <img class="mt-5" src="./img/appoint.jpg" height="600px" width="645px">
+            <img class="mt-5" src="./img/appoint.jpg" height="600px" width="645px" id="">
           </div>
           <div class="col-lg-6 appointment">
             <div class="float-end">
