--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <p class="card-title " id="motto"><em>Your health is our priority.</em></p>
     </div>
     <h1 class="mb-0 title top">GO-CA<span class="text-white">RE-CLINIQ</span></h1>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top me-auto">
+    <nav class="navbar navbar-expand-lg navbar-transparent bg-transparent fixed-top ">
         <div class="container-fluid">
          
           <button
@@ -72,24 +72,24 @@
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link  text-white" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
+                <a class="nav-link  text-white" href="services.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="appointment.html">Book Appointment</a>
+                <a class="nav-link text-white" href="appointment.html">Book Appointment</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="news.html">News & Media</a>
+                <a class="nav-link text-white" href="news.html">News & Media</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacts.html">Contact</a>
+              <li class="nav-item ">
+                <a class="nav-link text-white" href="contacts.html">Contact</a>
               </li>
              
             </ul>
