--- a/appointment.html
+++ b/appointment.html
@@ -117,11 +117,11 @@
                 <div class="mc-field-group">
                   <label for="mce-TYPE" class="">Type of Appointment:</label>
                   <select class="field" input type="text" name="APPOINTMENT" id="type" required>
-                      <option>Pharmacy</option>
+                    <option>Choose service</option>
+                      <option>Home-Based Care</option>
                       <option>Laboratory Services</option>
                       <option>Psychiatry</option>
                       <option>General Check-up</option>
-                      <option>Ambulance</option>
                       <option>Therapy</option>
                   </select>
               </div>
