--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
       
           
         <div class="bottom">
+          <p class="text-dark">Emergency contact:  <a href="+2547422084567">+2547422084567</a></p>
       <a class="btn btn-outline-light btn-floating m-1 " href="https://www.facebook.com/" target="_blank" role="button"
       ><i class="fab fa-facebook-f social" ></i
     ></a> 
