--- a/services.html
+++ b/services.html
@@ -246,7 +246,7 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.js"
     <div class="container p-4 pb-0">
 
       <section class="mb-4 last">
-    
+        <p class="text-dark">Emergency contact:  <a href="+2547422084567">+2547422084567</a></p>
        <!-- Facebook -->
        <a class="btn btn-outline-light btn-floating m-1 " href="https://www.facebook.com/" target="_blank" role="button"
        ><i class="fab fa-facebook-f social" ></i
