--- a/contacts.html
+++ b/contacts.html
@@ -83,7 +83,7 @@
               </div>
               <div class="col-lg-6">
                 <h3 id="asset">CONTACT US</h3>
-                <form action="https://formspree.io/f/xwkyqdjz" method="post" id="lost">
+                <form action="https://formspree.io/f/xyyoprwy" method="post" id="lost">
                     <div class="row p-1">
                         <div class="col-lg-12">
                             <input type="text" class="form-control bg-transparent text-black" id="pwd"placeholder="Name" name="text" required>
